--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
